--- a/backend/package.json
+++ b/backend/package.json
@@ -1,9 +1,12 @@
 {
-  "name": "backend",
+  "name": "appraisal-backend",
   "version": "1.0.0",
-  "main": "index.js",
+  "main": "server.js",
+  
   "scripts": {
+    "start": "node server.js",
     "test": "echo \"Error: no test specified\" && exit 1"
+    
   },
   "keywords": [],
   "author": "",
@@ -15,3 +18,5 @@
     "mongoose": "^8.19.2"
   }
 }
+
+
